--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = "https://amika11071107.github.io/"
+baseURL = "https://Rana-s07.github.io/"
 languageCode = 'en-us'
 title = 'Nitta Labo Tutorial'
 theme = "paper"
